--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,9 @@
-html {
+html, body {
     margin: 0;
     width: 100%;
     height: 100%;
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-    margin: 0;
 }
 
 #contentContainer {
@@ -27,6 +23,7 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: -1;
+    
 }
 
 /* object-fit: cover; The replaced content is sized to maintain its aspect ratio while filling the element’s entire content box. If the object's aspect ratio does not match the aspect ratio of its box, then the object will be clipped to fit. */
